--- a/src/Wko.BabyTracker/wwwroot/index.html
+++ b/src/Wko.BabyTracker/wwwroot/index.html
@@ -29,6 +29,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script type="module" src="js/bundled.min.js"></script>
 </body>
 
 </html>
