--- a/src/Wko.BabyTracker/wwwroot/index.html
+++ b/src/Wko.BabyTracker/wwwroot/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="fontawesomefree/css/all.min.css" type="text/css"/>
     <link href="css/colours.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="manifest.json" rel="manifest" />
     <link href="Wko.BabyTracker.styles.css" rel="stylesheet" />
 </head>
 
@@ -29,6 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>navigator.serviceWorker.register('js/service-worker.js');</script>
     <script type="module" src="js/dist/bundled.min.js"></script>
 </body>
 
