--- a/src/Wko.BabyTracker/wwwroot/index.html
+++ b/src/Wko.BabyTracker/wwwroot/index.html
@@ -32,7 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('js/service-worker.js');</script>
+    <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script type="module" src="js/dist/bundled.min.js"></script>
 </body>
 
