--- a/src/Wko.BabyTracker/wwwroot/index.html
+++ b/src/Wko.BabyTracker/wwwroot/index.html
@@ -33,7 +33,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="js/dist/bundled.min.iife.js"></script>
+    <script type="module" src="js/dist/bundled.min.js"></script>
 </body>
 
 </html>
